# realtime-vehicle-counting

./: .gitignore  CMakeLists.txt  README.md  count.md  dnn_processing.cpp  dnn_processing.h  helper.cpp  helper.h  main.cpp  notes.md  object_detection.cpp  objects.cpp  objects.h  processing_experiment.cpp  test.txt  tracking.cpp  tracking.h
examples/: object_detection.cpp
include/: counter.h  detector.h  helper.h  kalman_filter.h  matrix.cpp  matrix.h  munkres.h  tracker.h  utils.h
python/: namespace.yaml  object_detection.py  rvc-tui.py  test.sh
report/final_report/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  references.bib  report_tables.ods
report/final_report/figures/: systemflow-drawio
report/text/: report_week_1_2.md  report_week_3_4.md  report_week_5_6.md  report_week_7_8.md  report_week_9_10.md
src/: constants.h  counter.cpp  detector.cpp  dnn_processing.cpp  helper.cpp  kalman_filter.cpp  main.cpp  object_detection.cpp  objects.cpp  objects.h  processing_experiment.cpp  track.cpp  tracker.cpp  tracking.cpp
test/: CMakeLists.txt  out  test.cpp  test_iota.cpp
